Fix：发布脚本错误。

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,6 @@ publish:
     - npm install -g uglify-es
     - mkdir -p dist
     - uglifyjs -c -m --ecma 5 src/index.js -o dist/index.js
-    - echo '//registry.npmjs.org/:_authToken=' > .npmrc
-    - echo $NPM_TOKEN >> .npmrc
+    - echo '//registry.npmjs.org/:_authToken=' > ~/.npmrc
+    - echo $NPM_TOKEN >> ~/.npmrc
     - npm publish
