--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,5 +13,6 @@ publish:
     - npm install -g uglify-es
     - mkdir -p dist
     - uglifyjs -c -m --ecma 5 src/index.js -o dist/index.js
-    - echo '//registry.npmjs.org/:_authToken=$NPM_TOKEN' > ~/.npmrc
+    - echo -n '//registry.npmjs.org/:_authToken=' > ~/.npmrc
+    - echo -n $NPM_TOKEN >> ~/.npmrc
     - cat ~/.npmrc
