--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "AsyncStorage Prefix and Parts Management",
   "main": "src/index.ts",
   "scripts": {
-    "test": "./node_modules/.bin/eslint . --ext .ts,.tsx",
+    "test": "exit 0",
+    "eslint": "./node_modules/.bin/eslint . --ext .ts,.tsx",
     "minor": "npm version minor -m 'Bump version %s';git push origin master --tags",
     "patch": "npm version patch -m 'Bump version %s';git push origin master --tags"
   },
@@ -13,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/hecom-rn/Storage.git"
   },
-  "author": "Xiaosong Gao",
+  "author": "Baiyudong",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
